--- a/HTML_Modul_3_Bonus/css/style.css
+++ b/HTML_Modul_3_Bonus/css/style.css
@@ -34,17 +34,19 @@ body {
 .logo .contact{
 	color:  #e1e1e1;
 	float:right;
-	margin-top: 98px;
+	margin-top: 90px;
 	padding-left: 30px;
+	line-height: 15px;
 }
 .contact p {
 	color: #dbdbdb;
-	font-size: 9px;
+	font-size: 8px;
 	font-weight: bold;
+	padding-right: 12px;
 
 }
 .contact p:first-of-type {
-	font-size: 11px;
+	font-size: 10px;
 
 }
 .gallery {
@@ -52,7 +54,7 @@ body {
 	margin-right: 40px;
 }
 .photo_item {
-	margin-right: 16px;
+	margin-right: 18px;
 	float: left;
 	margin-bottom: 80px;
 
